<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@android:color/background_light">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logoschmidt"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="21dp"
        android:id="@+id/imageView2"
        android:contentDescription="@string/logo_schmidt_ag" />

    <TextView
        android:text="@string/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/textView2"
        android:textSize="20sp"
        android:textColor="@android:color/holo_orange_light"
        android:textAlignment="viewEnd"
        android:textStyle="normal|bold"
        android:layout_below="@+id/imageView2"
        android:layout_alignStart="@+id/imageView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/et_username"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignParentEnd="true"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/passwort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textColor="@android:color/holo_orange_light"
        android:textSize="20sp"
        android:textStyle="normal|bold"
        android:layout_below="@+id/et_username"
        android:layout_alignStart="@+id/textView2"
        android:layout_marginTop="17dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/et_password"
        tools:ignore="LabelFor"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_login"
        android:layout_marginTop="65dp"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_alignStart="@+id/textView3"
        android:id="@+id/cb_rememberme"
        android:text="@string/eingeloggt_bleiben"
        android:textColor="@color/colorAccent"
        android:textAlignment="viewStart" />
</RelativeLayout>