<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.stuxnet.schmidt_schadensprotokoll.Schadenaufnahme"
    tools:showIn="@layout/schadenaufnahme"
    android:background="@android:color/background_light">

    <TextView
        android:text="@string/ort_des_schadensaussen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="29dp"
        android:layout_below="@+id/sp_carnum"
        android:layout_alignStart="@+id/textView6" />

    <TextView
        android:text="@string/fahrzeugnummer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"
        android:layout_marginTop="46dp"
        android:id="@+id/textView6"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_carnum"
        android:layout_alignTop="@+id/textView6"
        android:layout_toEndOf="@+id/textView6"
        android:layout_marginRight="10dp"
        android:scrollbarSize="20dp"
        android:minWidth="20dp"
        android:layout_marginLeft="10dp" />

    <TextView
        android:text="@string/aufnahme_eines_neuen_schadens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_marginTop="59dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logoschmidt"
        android:id="@+id/imageView3"
        android:layout_alignParentBottom="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/addimages"
        android:layout_marginTop="29dp"
        android:id="@+id/btn_addimage"
        android:background="@android:color/background_light"
        android:layout_below="@+id/et_descriptionSchaden"
        android:layout_alignParentStart="true"
        android:contentDescription="" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sp_locationout"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignEnd="@+id/sp_carnum"
        android:layout_alignStart="@+id/sp_carnum" />

    <TextView
        android:text="@string/schadenbeschreibung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:id="@+id/textView9"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/ort_des_schadensinnen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView7"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/et_descriptionSchaden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginRight="13dp"
        android:inputType=""
        android:contentDescription="kurze Beschreibung des Schadens"
        android:textSize="20sp"
        android:layout_below="@+id/textView9"
        android:layout_alignEnd="@+id/sp_carnum" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView7"
        android:id="@+id/sp_locationin"
        android:layout_toEndOf="@+id/textView4" />

</RelativeLayout>